--- a/Website/wwwroot/index.html
+++ b/Website/wwwroot/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Website</title>
     <base href="/" />
-    <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="css/app.css" />
+    <link href="_content/LeafCoreX.Components/bundle-1.0.0.css" rel="stylesheet">
+    <link rel="stylesheet" href="blazor-default.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
     <link href="Website.styles.css" rel="stylesheet" />
 </head>
@@ -26,7 +26,9 @@
         <a href="." class="reload">Reload</a>
         <span class="dismiss">🗙</span>
     </div>
+    
     <script src="_framework/blazor.webassembly.js"></script>
+    <script src="_content/LeafCoreX.Components/bundle-1.0.0.min.js"></script>
 </body>
 
 </html>
