--- a/Website/wwwroot/index.html
+++ b/Website/wwwroot/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Website</title>
     <base href="/" />
-    <link href="_content/LeafCoreX.Components/bundle-1.0.0.css" rel="stylesheet">
     <link rel="stylesheet" href="blazor-default.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
     <link href="Website.styles.css" rel="stylesheet" />
@@ -27,8 +26,9 @@
         <span class="dismiss">🗙</span>
     </div>
     
+    <script type="module" src="http://localhost:5173/@vite/client"></script>
+    <script type="module" src="http://localhost:5173/main.ts"></script>
     <script src="_framework/blazor.webassembly.js"></script>
-    <script src="_content/LeafCoreX.Components/bundle-1.0.0.min.js"></script>
 </body>
 
 </html>
